# Simple-RAG

./: .gitignore  Dockerfile  chatbot.py  ingest.py  pyproject.toml  run_ingest.py  ui.py
documents/: Airtel FAQ's.docx  Airtel pre to postpaid .docx  FAQ.docx  Industry Charter.docx  Online Privacy Policy.docx  airtel_plans.csv  jio.json  polinj.docx
