[project]
name = "rag-chat"

version = "0.1.0"
description = "RAG chatbot "
readme = "README.md"

requires-python = "==3.10.17"

dependencies = [
"langchain", 
"langchain-community",
"gradio",
"chromadb",
"python-dotenv",
"openai",
"python-docx", 
"pdfplumber",
"pymupdf", 
"sentence-transformers"
]

